@@ -2105,6 +2105,13 @@ argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|calls
+operator|.
+name|remove
+argument_list|(
+name|id
+argument_list|)
+expr_stmt|;
 block|}
 else|else
 block|{
