@@ -409,6 +409,7 @@ Release 0.21.0 - Unreleased
                (Karthik Ranganathan via JD)
    HBASE-2769  Fix typo in warning message for HBaseConfiguration
    HBASE-2768  Fix teardown order in TestFilter
+   HBASE-2763  Cross-port HADOOP-6833 IPC parameter leak bug
 
   IMPROVEMENTS
    HBASE-1760  Cleanup TODOs in HTable
